First raw security implementation