@@ -1,6 +1,8 @@
 package it.luzzetti.justdrink.backoffice.application.services.worktime;
 
 import it.luzzetti.justdrink.backoffice.application.ports.input.worktime.CreateOpeningUseCase;
+import it.luzzetti.justdrink.backoffice.application.ports.output.SecurityPort;
+import it.luzzetti.justdrink.backoffice.application.ports.output.restaurant.FindRestaurantPort;
 import it.luzzetti.justdrink.backoffice.application.ports.output.worktime.FindWorktimePort;
 import it.luzzetti.justdrink.backoffice.application.ports.output.worktime.GenerateOpeningIdPort;
 import it.luzzetti.justdrink.backoffice.application.ports.output.worktime.SaveWorktimePort;
@@ -20,13 +22,15 @@ public class CreateOpeningApplicationService implements CreateOpeningUseCase {
 
   // Ports
   private final FindWorktimePort findWorktimePort;
-  private final SaveWorktimePort saveWorktimePort;
+  private final FindRestaurantPort findRestaurantPort;
   private final GenerateOpeningIdPort generateOpeningIdPort;
+  private final SaveWorktimePort saveWorktimePort;
+  private final SecurityPort securityPort;
 
   @Override
   @Transactional
   public Opening createOpening(@Valid CreateOpeningCommand command) {
-    log.debug(() -> String.format("createOpening(%s)", command));
+    log.debug(() -> "createOpening(%s)".formatted(command));
 
     // Fetching resources
     Worktime theWorktime =
